--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -68,7 +68,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/16/n10223963.md#1" target="_blank">“西单民主墙”前后的邓小平</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077365.md#1" target="_blank">金剑：阶级斗争是民族毁灭的动力</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
